--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -7,11 +7,43 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ScrollingActivity"
     tools:showIn="@layout/activity_scrolling">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <TextView
+        android:id="@+id/BMICalcTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="BMI Calculator">
+    </TextView>
     <EditText
-        android:id="@+id/test"
+        android:id="@+id/weight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:hint="weight"
+        android:inputType="number" />
+    <EditText
+        android:id="@+id/height"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="height"
+        android:inputType="number" />
+    <TextView
+        android:id="@+id/BMIResult"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="">
+    </TextView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Calculate BMI"
+        android:onClick="calculateBmi" />
+
+</LinearLayout>
+
 </androidx.core.widget.NestedScrollView>
