--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -39,6 +39,7 @@
     </TextView>
 
     <Button
+        android:id="@+id/BMIButton"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Calculate BMI"
